<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fancy Album</string>
    <string name="menu_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_refresh">REFRESH</string>
    <string name="action_take_photo">TAKE PHOTO</string>
    <string name="action_share_app">SHARE</string>
    <string name="action_delete">DELETE</string>
     <string name="action_rotate_left">Rotate left</string>
     <string name="action_rotate_right">Rotate right</string>
     <string name="action_details">Details</string>
    
    <string name="title_detail_activity">Details</string>
	

</resources>